--- a/newspage.css
+++ b/newspage.css
@@ -53,7 +53,8 @@ header nav a  {
     width: 70px;
     display: inline-block;
     margin: 5% 2px;
-    padding: 10px 5px;
+    padding: 10px 3px;
+    padding-bottom: 1px;
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 14px;
@@ -62,9 +63,29 @@ header nav a  {
     position: relative;
     text-decoration: none;
     letter-spacing: 1.5px;
-    background-color: #A6A6A6;
+    background-color: #fdfdaf;
     border-radius: 20px 20px 0px 0;
 
+}
+header nav a:hover{
+    background-color: #F0EFEC;
+}
+
+
+.article-link:hover {
+    background-color: #fdfdaf;
+}
+
+.blog-link:hover {
+    background-color: #9696fd;
+}
+
+.music-link:hover {
+    background-color: #BF4F49;
+}
+
+.connect-link:hover {
+    background-color: #D2691E
 }
 
 header nav a:hover{
@@ -74,8 +95,8 @@ header nav a:hover{
 
 /*light panel has curved edges at the top/ for placement on left side of screen */
 body main .light-panel  {
-    background-color: #a6a6a6;
-    width: 650px;
+    background-color: #fdfdaf;
+    min-width: 600px;
     color: #292929; 
     border-radius: 20px 20px 0px 0;
     margin-left: 10%;
@@ -87,22 +108,29 @@ body main .light-panel  {
 
 /*light panel has flat edges at the top/ for placement on left side of screen */
 
-body main .light-panel2  {
-    background-color: #a6a6a6;
-    color: #292929;
+body main .light-panel2, .light-panel  {
+     background-color: #EDEDA9;
+    text-align: center;
+    color: #2A2A3B;;
     margin-top: -10px;
     padding: 0px 20px;
-
+    
+  
 }
+
+
 
 
 .light-panel h2, .light-panel2 h2{
     padding: 8px;
     text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: #E8E8AC;
-    text-shadow: 2px 2px #B7B859;
+    font-family: 'Acme', sans-serif;
+    letter-spacing: 1px;
+    color: #A9A9ED;
+    text-shadow: 2px 2px  #425F42;
     margin-bottom: 0px;
+
+    
 }
 
 .light-panel h3 {
@@ -133,10 +161,17 @@ body main .light-panel2  {
 
 
 .light-panel p, .light-panel2 p {
-    padding: 0px 15px 5px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    padding: 0px 15px 0px;
     font-size: 16px;
+    text-indent: 20px;
+    letter-spacing: 1px;
+    text-align: left;
+    font-family: 'Kufam', cursive;
+    
 }
+
+
+
 
 
 /*dark panel has curved edges at the bottom for footer use only */
@@ -144,7 +179,7 @@ body .dark-panel2{
     background-color: #737373;
     margin-top: -12px;
     border-radius: 0px 0px 20px 20px;
-    width: 950px;
+    width: 970px;
     margin-left: 10%;
 display: flex;
 justify-content: center;
@@ -192,11 +227,17 @@ main article header{
  }
 
 /* article styles - feature article, */
+.feature-article h3 {
+    font-family: 'Cinzel', serif;
+    letter-spacing: 1px;
+    color: #555576;
 
-.feature-article h3{
-    color: #2E55CA;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    margin-left: 20px;
+}
+
+.feature-article h4 {
+    font-family: 'Cinzel', serif;
+    letter-spacing: 1px;
+    color: #555576;
 
 }
 
@@ -209,7 +250,9 @@ main article header{
 
 }
 
-
+.feature-article footer li {
+padding:5px;
+}
 /* article styles - author info, */
 
 .author-info{
@@ -225,7 +268,7 @@ main article header{
 
 /* article styles - feature image, */
 
-.feature-article img {
+.feature-img img {
     width: 500px;
     height: 300px;
     padding-top: 10px;
@@ -260,6 +303,27 @@ padding-left:5px;
     margin-bottom: 0px;
     padding: 0px;
     margin: 0px;
+}
+
+.floating-img-right {
+    float: right;
+    padding: 10px;
+    font-style: italic;
+    font-weight: bold;
+}
+.floating-img-left {
+    float: left;
+    padding: 10px;
+    
+}
+
+.floating-img-right p, .floating-img-left p  {
+   
+    padding: 0px;
+    margin: 0px;
+    font-style: italic;
+    font-weight: bold;
+
 }
 
 /* article styles - related articles section, */
@@ -360,10 +424,10 @@ text-align: center;
      min-width: 300px;
      color: #F0EFEC; 
      border-radius: 20px 20px 0px 0;
-    
+    padding: 15px;
      margin-top: 20px;
      margin-bottom: 10px;
-        
+    text-align: center;
     
         
     }
